tamagotchi = finished version

--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/velocity/2.0.5/velocity.min.js"></script>
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.ui.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.js"></script>
+   <script src = "https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.2/velocity.ui.js"></script>
     
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 
 </head>
 <body>
-        <audio id="start"></audio>
+        
 <div class="parent">
 
-<img class="image2" src="fox.png" alt=" fox" style="width: 200px; height: 140px;">
-    <button class="playgame">Play Game</button>
+<img class="image2" src="fox.png" alt=" fox" style="width: 200px; height: 140px;"></img>
+  
+<img class="image3" src="tama.png" alt="logo" style="width: 200px; height: 100px;"></img>
+
+<img class="image4" src="angryfox.png" alt="angryfox" style="width: 200px; height: 140px;"></img>
+
+
+
+
+<button class="playgame">Play Game</button>
+
 <div class= "character"></div>
 </div>
 
